--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,6 +1,7 @@
 ---
+classroom.jpg: classroom-a4d67434cd3fcae8c4cafc4245bfa5f9.jpg
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-9aee32e7c68793c157f81fb612ebcdb7.js
-application.css: application-7708a4e2f8aa73935d3339148e0c7622.css
+application.js: application-d453ca6471722ce636bdbb40f34f04e8.js
+application.css: application-e7f899b20423a219e5f6ed654cb2ca24.css
